Fix Comp Me Daddy: broken AVM display, generatePropertyTake, displayCompsDashboard; add subject property data

--- a/index.html
+++ b/index.html
@@ -835,17 +835,17 @@
                                             <td bgcolor="#330033" align="center">
                                                 <b>PROPERTYREACH VALUE</b>
                                                 <br>
-                                                $0
+                                                <span id="rentcastEstimate">$0</span>
                                             </td>
                                             <td bgcolor="#330033" align="center">
                                                 <b>CONFIDENCE</b>
                                                 <br>
-                                                HIGH
+                                                <span id="rentcastConfidence">--</span>
                                             </td>
                                             <td bgcolor="#330033" align="center">
                                                 <b>PRICE RANGE</b>
                                                 <br>
-                                                $0 - $0
+                                                <span id="rentcastRange">--</span>
                                             </td>
                                         </tr>
                                     </table>
@@ -855,7 +855,7 @@
                                             <td bgcolor="#003300" align="center" style="border: 3px solid #00FF00;">
                                                 <b>🔥 RENOVATED ARV (High-End Finish)</b>
                                                 <br>
-                                                $0
+                                                <span id="renovatedARV">$0</span>
                                                 <br>
                                                 Based on avg <span id="compAvgPPSF">$0</span> from quality comps only
                                             </td>
