Remove RentCast; rent blank with clear placeholder when no API data
RentCast subscription lapsed. Removed RENTCAST_API_KEY, fetchRentEstimate,
and all 1% rule fallbacks. Rent field now shows empty with placeholder
'No PropertyReach data — enter manually' when API has nothing.
Clean and honest beats fabricated.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                         <b>Monthly Rent ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API">
+                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="No PropertyReach data — enter manually">
                                     </td>
                                     <td bgcolor="#000066" align="right">
                                         <b>Interest Rate (%):</b>
