feat: Added frontend version tag (v2.0)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="ui-overlay header">
-        <h1>CHICKASHA HOODMAP 🧙‍♂️</h1>
+        <h1>CHICKASHA HOODMAP 🧙‍♂️ <span id="app-version" style="font-size: 0.7em; color: #888;">v2.0</span></h1>
         <small>Real estate slop & tactical zones</small>
     </div>
 
