--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="ui-overlay header">
-        <h1>CHICKASHA HOODMAP 🧙‍♂️ <span id="app-version" style="font-size: 0.7em; color: #888;">v2.0</span></h1>
+        <h1>CHICKASHA HOODMAP 🧙‍♂️</h1>
         <small>Real estate slop & tactical zones</small>
     </div>
 
@@ -55,7 +55,7 @@
             attribution: '&copy; OpenStreetMap &copy; CARTO'
         }).addTo(map);
 
-        fetch('data.json')
+        fetch('data.json?cache_buster=' + new Date().getTime())
             .then(res => res.json())
             .then(data => {
                 L.geoJSON(data, {
